Responsividade Disco Elysium
Responsividade Disco Elysium

--- a/disco.html
+++ b/disco.html
@@ -299,8 +299,8 @@
               </div>
             </div>
           </div>
-          <div class="conqpadrao">
-            <div class="imgspadrao-cinza2">
+          <div class="conqtirah">
+            <div class="imgspadrao-cinza imgscenter ">
               <div class="frame">
                 <img class="imageiconpadrao" src="./imagens/disco_img/imageconqobs0.png" />
                 <div class="tituloconqpadrao">
