Adição de áudio
Adição de áudio

--- a/chrono.html
+++ b/chrono.html
@@ -16,6 +16,11 @@
 
 <body>
     <div class="chrono-trigger-guia-conquistas">
+        <audio id="musica" muted autoplay loop style="display: none;">
+            <source src="./audio/Wii Party Soundtrack 026 - Animal Tracker.mp3" type="audio/mpeg">
+            Seu navegador não suporta a tag de áudio.
+          </audio>
+          <button id="muteButton">🔇 Som desligado</button>
         <nav class="navbar-tipo-1">
             <span class="silk-shadows">Silk &amp; Shadows</span>
             <div class="links">
@@ -396,5 +401,6 @@
     </footer>
     
     </div>
+    <script src="paginicial.js"></script>
 </body>
 </html>
