--- a/disco.html
+++ b/disco.html
@@ -14,6 +14,11 @@
 </head>
 
 <body>
+  <audio id="musica" muted autoplay loop style="display: none;">
+    <source src="./audio/Wii Party Soundtrack 026 - Animal Tracker.mp3" type="audio/mpeg">
+    Seu navegador não suporta a tag de áudio.
+  </audio>
+  <button id="muteButton">🔇 Som desligado</button>
   <nav class="navbar-tipo-1">
     <span class="silk-shadows">Silk &amp; Shadows</span>
     <div class="links">
@@ -1339,7 +1344,7 @@
   </footer>
   </div>
   </div>
-
+  <script src="paginicial.js"></script>
 </body>
 
 </html>
