--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./paginicial.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
   <link
     href="https://fonts.googleapis.com/css2?family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap"
     rel="stylesheet">
@@ -16,6 +17,11 @@
 
 <body>
   <div class="guias">
+    <audio id="musica" autoplay loop muted style="display: none;">
+      <source src="./audio/Nintendo 3DS Music - Mii Maker.mp3" type="audio/mpeg">
+      Seu navegador não suporta a tag de áudio.
+  </audio>
+  <button id="muteButton">🔇 Som desligado</button>
     <nav class="navbar-tipo-1">
       <span class="silk-shadows">Silk &amp; Shadows</span>
       <div class="links">
@@ -161,6 +167,7 @@
       </nav>
     </footer>
   </div>
+  <script src="paginicial.js"></script>
 </body>
 
 </html>
