--- a/gris.html
+++ b/gris.html
@@ -393,7 +393,7 @@
         </div>
         <div class="linha">
           <div class="colecionador">
-            <div class="titulo">Colecionador de Lembranças</div>
+            <div class="titulo-aves-m-gicas">Colecionador de Lembranças</div>
             <div class="desc">
               <span>
                 <span class="desc-span">Colete todas as lembranças,</span>
@@ -404,7 +404,7 @@
           </div>
           <div class="infancia">
             <div class="text-infancia">
-              <div class="titulo">Infância</div>
+              <div class="titulo-aves-m-gicas">Infância</div>
               <div class="desc">
                 Depois de pegar todas as lembranças do jogo, selecione o último capítulo e vá logo abaixo, onde seu
                 personagem começa. Há uma entrada no lado esquerdo escondida em uma parede quebrada.
